Use Java 21