@@ -94,19 +94,19 @@ public class SubtotalPositionTest extends AbstractBandTest {
     @Override
     protected void summaryBandTest(DRDesignBand band) {
         final DRDesignComponent component = band.getBandComponent();
-        Assertions.assertTrue(component instanceof DRDesignList);
+        Assertions.assertInstanceOf(DRDesignList.class, component);
         DRDesignList list = (DRDesignList) component;
         Assertions.assertEquals(ListType.HORIZONTAL, list.getType());
         Assertions.assertEquals(1, list.getComponents().size());
         componentPositionTest(list, 0, 0, 575, 32);
-        Assertions.assertTrue(list.getComponents().get(0) instanceof DRDesignList);
+        Assertions.assertInstanceOf(DRDesignList.class, list.getComponents().getFirst());
 
-        list = (DRDesignList) list.getComponents().get(0);
+        list = (DRDesignList) list.getComponents().getFirst();
         Assertions.assertEquals(ListType.VERTICAL, list.getType());
         Assertions.assertEquals(2, list.getComponents().size());
         componentPositionTest(list, 383, 0, 192, 32);
-        Assertions.assertTrue(list.getComponents().get(0) instanceof DRDesignTextField);
-        Assertions.assertTrue(list.getComponents().get(1) instanceof DRDesignTextField);
+        Assertions.assertInstanceOf(DRDesignTextField.class, list.getComponents().get(0));
+        Assertions.assertInstanceOf(DRDesignTextField.class, list.getComponents().get(1));
 
         // column3
         componentPositionTest(list.getComponents().get(0), 383, 0, 192, 16);
@@ -115,14 +115,14 @@ public class SubtotalPositionTest extends AbstractBandTest {
 
     protected void testBand(DRDesignBand band) {
         final DRDesignComponent component = band.getBandComponent();
-        Assertions.assertTrue(component instanceof DRDesignList);
+        Assertions.assertInstanceOf(DRDesignList.class, component);
         final DRDesignList list = (DRDesignList) component;
         Assertions.assertEquals(ListType.HORIZONTAL, list.getType());
         Assertions.assertEquals(1, list.getComponents().size());
         componentPositionTest(list, 0, 0, 575, 16);
-        Assertions.assertTrue(list.getComponents().get(0) instanceof DRDesignTextField);
+        Assertions.assertInstanceOf(DRDesignTextField.class, list.getComponents().getFirst());
 
         // column3
-        componentPositionTest(list.getComponents().get(0), 383, 0, 192, 16);
+        componentPositionTest(list.getComponents().getFirst(), 383, 0, 192, 16);
     }
 }
