@@ -166,7 +166,7 @@ public class ReportTemplateTest {
             Assertions.assertEquals( RunDirection.RIGHT_TO_LEFT, report.getColumnDirection(), "column direction");
             Assertions.assertEquals( Language.GROOVY, report.getLanguage(),"language");
 
-            final DRDesignTextField columnTextField1 = (DRDesignTextField) ((DRDesignList) report.getDetailBands().get(0).getBandComponent()).getComponents().get(0);
+            final DRDesignTextField columnTextField1 = (DRDesignTextField) ((DRDesignList) report.getDetailBands().getFirst().getBandComponent()).getComponents().getFirst();
             DRIDesignStyle style = columnTextField1.getStyle();
             Assertions.assertEquals( Color.BLUE, style.getConditionalStyles().get(0).getBackgroundColor(),"detail odd row style");
             Assertions.assertEquals( Color.CYAN, style.getConditionalStyles().get(1).getBackgroundColor(), "detail even row style");
@@ -183,7 +183,7 @@ public class ReportTemplateTest {
             Assertions.assertFalse(columnTextField1.isPrintRepeatedValues(),"column print repeated detail values");
             Assertions.assertEquals(Integer.valueOf(180), columnTextField1.getWidth(),"column width");
 
-            final DRDesignTextField columnTextField2 = (DRDesignTextField) ((DRDesignList) report.getDetailBands().get(0).getBandComponent()).getComponents().get(1);
+            final DRDesignTextField columnTextField2 = (DRDesignTextField) ((DRDesignList) report.getDetailBands().getFirst().getBandComponent()).getComponents().get(1);
             style = columnTextField2.getStyle();
             Assertions.assertEquals(Color.BLUE, style.getConditionalStyles().get(0).getBackgroundColor(), "detail odd row style");
             Assertions.assertEquals(Color.CYAN, style.getConditionalStyles().get(1).getBackgroundColor(), "detail even row style");
@@ -205,37 +205,37 @@ public class ReportTemplateTest {
             final DRDesignList titleList = (DRDesignList) report.getTitleBand().getBandComponent();
             Assertions.assertEquals(10, titleList.getGap(), "list gap");
 
-            final DRDesignComponent image = titleList.getComponents().get(0);
+            final DRDesignComponent image = titleList.getComponents().getFirst();
             Assertions.assertEquals( Integer.valueOf(110), image.getWidth(), "image width");
             Assertions.assertEquals( Integer.valueOf(120), image.getHeight(), "image height");
 
             final DRDesignComponent chart = titleList.getComponents().get(1);
             Assertions.assertEquals(Integer.valueOf(210), chart.getWidth(), "chart width");
             Assertions.assertEquals(Integer.valueOf(220), chart.getHeight(),"chart height");
-            Assertions.assertEquals(Color.BLUE, ((AbstractDesignBasePlot) ((DRDesignChart) chart).getPlot()).getSeriesColors().get(0),"chart colors");
+            Assertions.assertEquals(Color.BLUE, ((AbstractDesignBasePlot) ((DRDesignChart) chart).getPlot()).getSeriesColors().getFirst(),"chart colors");
             Assertions.assertEquals("customTheme", ((DRDesignChart) chart).getTheme(),"chart theme");
 
             final DRDesignCrosstab crosstab = (DRDesignCrosstab) titleList.getComponents().get(2);
             Assertions.assertEquals(Integer.valueOf(90), crosstab.getWidth(), "crosstab width");
             Assertions.assertEquals(Integer.valueOf(101), crosstab.getHeight(), "crosstab height");
-            style = crosstab.getCells().get(0).getContent().getComponent().getStyle();
+            style = crosstab.getCells().getFirst().getContent().getComponent().getStyle();
             Assertions.assertEquals(new Color(63, 241, 191), style.getConditionalStyles().get(0).getBackgroundColor(), "crosstab odd row style");
             Assertions.assertEquals(new Color(63, 191, 255), style.getConditionalStyles().get(1).getBackgroundColor(), "crosstab even row style");
             Assertions.assertEquals(Color.CYAN, style.getParentStyle().getBackgroundColor(), "crosstab cell style");
-            style = crosstab.getColumnGroups().get(0).getHeader().getComponent().getStyle();
+            style = crosstab.getColumnGroups().getFirst().getHeader().getComponent().getStyle();
             Assertions.assertEquals(Color.RED, style.getBackgroundColor(), "crosstab column header style");
-            style = ((DRIDesignList) crosstab.getColumnGroups().get(0).getTotalHeader().getComponent()).getComponents().get(0).getStyle();
+            style = ((DRIDesignList) crosstab.getColumnGroups().get(0).getTotalHeader().getComponent()).getComponents().getFirst().getStyle();
             Assertions.assertEquals(Color.BLUE, style.getBackgroundColor(), "crosstab column total header style");
-            style = ((DRIDesignList) crosstab.getColumnGroups().get(1).getHeader().getComponent()).getComponents().get(0).getStyle();
+            style = ((DRIDesignList) crosstab.getColumnGroups().get(1).getHeader().getComponent()).getComponents().getFirst().getStyle();
             Assertions.assertEquals( Color.RED, style.getBackgroundColor(), "crosstab column total header style");
-            style = ((DRIDesignList) crosstab.getColumnGroups().get(1).getTotalHeader().getComponent()).getComponents().get(0).getStyle();
+            style = ((DRIDesignList) crosstab.getColumnGroups().get(1).getTotalHeader().getComponent()).getComponents().getFirst().getStyle();
             Assertions.assertEquals(Color.ORANGE, style.getBackgroundColor(), "crosstab column total header style");
-            style = ((DRIDesignList) crosstab.getRowGroups().get(0).getHeader().getComponent()).getComponents().get(0).getStyle();
+            style = ((DRIDesignList) crosstab.getRowGroups().getFirst().getHeader().getComponent()).getComponents().getFirst().getStyle();
             Assertions.assertEquals(Color.RED, style.getBackgroundColor(), "crosstab row header style");
-            style = crosstab.getRowGroups().get(0).getTotalHeader().getComponent().getStyle();
+            style = crosstab.getRowGroups().getFirst().getTotalHeader().getComponent().getStyle();
             Assertions.assertEquals(Color.BLUE, style.getBackgroundColor(),"crosstab row total header style");
 
-            style = crosstab.getColumnGroups().get(0).getHeader().getStyle();
+            style = crosstab.getColumnGroups().getFirst().getHeader().getStyle();
             Assertions.assertEquals(Color.RED, style.getBackgroundColor(), "crosstab column header style");
             style = crosstab.getColumnGroups().get(0).getTotalHeader().getStyle();
             Assertions.assertEquals(Color.BLUE, style.getBackgroundColor(),"crosstab column total header style");
@@ -243,9 +243,9 @@ public class ReportTemplateTest {
             Assertions.assertEquals(Color.RED, style.getBackgroundColor(),"crosstab column header style");
             style = crosstab.getColumnGroups().get(1).getTotalHeader().getStyle();
             Assertions.assertEquals(Color.ORANGE, style.getBackgroundColor(), "crosstab column total header style");
-            style = crosstab.getRowGroups().get(0).getHeader().getStyle();
+            style = crosstab.getRowGroups().getFirst().getHeader().getStyle();
             Assertions.assertEquals(Color.RED, style.getBackgroundColor(), "crosstab row header style");
-            style = crosstab.getRowGroups().get(0).getTotalHeader().getStyle();
+            style = crosstab.getRowGroups().getFirst().getTotalHeader().getStyle();
             Assertions.assertEquals(Color.BLUE, style.getBackgroundColor(), "crosstab row total header style");
 
             style = ((DRIDesignList) crosstab.getColumnGroups().get(0).getTotalHeader().getComponent()).getComponents().get(1).getStyle();
@@ -255,7 +255,7 @@ public class ReportTemplateTest {
             style = ((DRIDesignList) crosstab.getColumnGroups().get(1).getTotalHeader().getComponent()).getComponents().get(1).getStyle();
             Assertions.assertEquals(Color.YELLOW, style.getBackgroundColor(), "crosstab measure title header style");
 
-            Assertions.assertEquals(SplitType.IMMEDIATE, report.getDetailBands().get(0).getSplitType(), "detail split type");
+            Assertions.assertEquals(SplitType.IMMEDIATE, report.getDetailBands().getFirst().getSplitType(), "detail split type");
         } catch (final DRException e) {
             e.printStackTrace();
             Assertions.fail(e.getMessage());
@@ -281,20 +281,20 @@ public class ReportTemplateTest {
         try {
             final DRDesignReport report = new DRDesignReport(rb.getReport());
 
-            DRDesignTextField textField = (DRDesignTextField) ((DRDesignList) report.getDetailBands().get(0).getBandComponent()).getComponents().get(0);
+            DRDesignTextField textField = (DRDesignTextField) ((DRDesignList) report.getDetailBands().getFirst().getBandComponent()).getComponents().getFirst();
             Assertions.assertEquals(Integer.valueOf(1), textField.getStyle().getFont().getFontSize(), "column style");
 
             textField = (DRDesignTextField) ((DRDesignList) report.getColumnHeaderBand().getBandComponent()).getComponents().get(1);
             Assertions.assertEquals(Integer.valueOf(2), textField.getStyle().getFont().getFontSize(), "column title style");
 
-            final DRDesignList groupHeaderComponent = (DRDesignList) new ArrayList<>(report.getGroups()).get(0).getHeaderBands().get(0).getBandComponent();
+            final DRDesignList groupHeaderComponent = (DRDesignList) new ArrayList<>(report.getGroups()).getFirst().getHeaderBands().getFirst().getBandComponent();
             textField = (DRDesignTextField) groupHeaderComponent.getComponents().get(1);
             Assertions.assertEquals(Integer.valueOf(3), textField.getStyle().getFont().getFontSize(), "group style");
 
             textField = (DRDesignTextField) groupHeaderComponent.getComponents().get(0);
             Assertions.assertEquals(Integer.valueOf(4), textField.getStyle().getFont().getFontSize(), "group title style");
 
-            textField = (DRDesignTextField) ((DRDesignList) report.getSummaryBand().getBandComponent()).getComponents().get(0);
+            textField = (DRDesignTextField) ((DRDesignList) report.getSummaryBand().getBandComponent()).getComponents().getFirst();
             Assertions.assertEquals(Integer.valueOf(5), textField.getStyle().getFont().getFontSize(), "subtotal style");
 
             final DRDesignImage image = (DRDesignImage) ((DRDesignList) report.getTitleBand().getBandComponent()).getComponents().get(0);
